In this file, i try to keep track of important chnages to my library, most importantly, changes 
that break client code.


Client-Code-Breaking Changes:

2019/10/20: rsLine2D: changed output parameters from references to pointers
2019/10/11: rapt::rsArray: renamed areBuffersApproximatelyEqual to almostEqual
                                   areBuffersEqual              to equal
                                   clipBuffer                   to clip
                                   copyBuffer                   to copy
2019/09/09: rapt::rsScaledAndShiftedSigmoid: renamed setPrototypeSigmoid to setSigmoid
2018/10/04: rosic::rsSubBandFilterDirectForm is now rsSubBandFilterMono
2018/08/10: AudioModule::createEditor expects an int parameter now
2018/08/09: ModulationSource subclasses now need to override getModulatorOutputSample() instead of updateModulationValue()


Other Changes:

